CHANGELOG

2.0.54
UTIL:

BUGFIX:

GENERAL:


2.0.53 (20220802)
UTIL:
* class MERGER | code cleaning - improvement to use methods | benefit for service-/tag-/addressgroup-/servicegroup-merger


2.0.52 (20220801)
UTILS:
* type=device | introduce 'filter=(name is.in.file FILE)'

BUGFIX:
* type=device actions=manageddevice-delete/-create | fix/rework method
* type=rulemerger | bugfix for exportcsv if rule is skipped because of deny or none matching filter

GENERAL:
* update dockerfiles and install_script_ubuntu


2.0.51 (20220731)
UTILS:
* UTIL different classes - improvement for usage output
* type=stats | introduce argument exportcsv=json.csv - to get stats exported in CSV
* type=diff | final improvement for stdout of diff

BUGFIX:
* class ObjectwithDescription | method description_merge() - do not merge description if other description is empty`
* type=address-/service-/tag-merger | bugfix if object creation, to update objects in memory for merging part

GENERAL:


2.0.50 (20220729)
UTILS:
* type=dhcp - introduction
* development ike.php - extension for GreTunnel
* type=rule-merger | improved exportcsv to also display the original rule which is getting manipulate
* type=address-merger | improvements for dupalgorithm=identical - do not create new objects

BUGFIX:
* type=diff | bugfix if argument filter is used with $$name$$
* type=diff filter=jsonfile.json | bugfix if no include filter is set but exclude must be triggered
* type=[object]-merger | bugfix to use location=DG1,DG2
* typ=address-merger dupalgorthm=identical | bugfix to NOT merge not identical objects but same value from childDG #584
* type=address-merger | fix pickfilter if allowmergingwithupperlevel is used

GENERAL:
* bash autocompletion - extension for actions= filter=
* introduce class DHCP / GreTunnel and all respective additions for UTILS
* different classes | extend validation for usage of json_decode
* update dynamic content version to 8597-7479


2.0.49 (20220726)
UTILS: